--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Web Page</title>
+    <title>My Data Science Projects</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>My Data Science Projects</h1>
+    <ul>
+        <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Beginner_Projects">Beginner Projects</a></li>
+        <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a></li>
+        <!-- Add more project links as needed -->
+    </ul>
 </body>
 </html>
