--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
 </head>
 <body>
     <h1>My Data Science Projects</h1>
-    <ul>
-        <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Beginner_Projects">Beginner Projects</a></li>
-        <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a></li>
-        <!-- Add more project links as needed -->
-    </ul>
+
+    <!-- Introduction Section -->
+    <section>
+        <h2>About Me and My Journey</h2>
+        <p>Welcome to my GitHub page! I'm on a journey to build a career in data science, and this page showcases my progress and skills acquired along the way.</p>
+        <p>Through a data science class, I've been honing my skills in Python, machine learning, natural language processing (NLP), data visualization, R, SQL, and various popular data science libraries.</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section>
+        <h2>My Data Science Projects</h2>
+        <p>Below, you'll find a collection of projects I've worked on to demonstrate my understanding of data science concepts. These projects span different sectors and utilize a variety of techniques and tools.</p>
+        <p>While there's no specific order to the projects, each one serves as a testament to my dedication to learning and my ability to apply data science skills to real-world problems.</p>
+        <p>I hope that the skills showcased in these projects will help me secure a job in the data science field and contribute to exciting and meaningful projects.</p>
+    </section>
+
+    <!-- Project Links -->
+    <section>
+        <h2>Explore My Projects</h2>
+        <ul>
+            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Customer%20Segmentation">Customer Segmentation</a></li>
+            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Movie%20Recommendation">Movie Recommendation</a></li>
+            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Product%20Bundling%20Project">Product Bundling Project</a></li>
+            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a></li>
+            <!-- Add more project links as needed -->
+        </ul>
+    </section>
+
 </body>
 </html>
