--- a/index.html
+++ b/index.html
@@ -25,9 +25,34 @@
     <section>
         <h2>Explore My Projects</h2>
         <ul>
-            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Customer%20Segmentation">Customer Segmentation</a></li>
+            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Customer%20Segmentation">Customer Segmentation</a>
+                <!-- Add the project summary here -->
+                <p>In this data science project, I explored the Sales Transactions Dataset Weekly to gain insights into customer behavior and segment customers effectively. The primary objective was to identify distinct customer groups based on their purchase patterns.</p>
+                <p>This project involved data preprocessing, determining the optimal number of clusters, performing K-Means clustering, visualizing the clusters, and interpreting the results. It provides valuable insights for marketing and sales strategies.</p>
+                <!-- End of project summary -->
+            </li>
+
+            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Product%20Bundling%20Project">Product Bundling Recommendation System</a>
+                <!-- Add the project summary here -->
+                <p>The goal of this project was to develop a sophisticated and efficient product bundling recommendation system. This system leverages various data science techniques to analyze customer buying habits and suggest bundles of products that are frequently purchased together.</p>
+                <p>The project included data preprocessing, exploratory data analysis (EDA), K-Means Clustering for customer segmentation, and Association Rule Mining using the Apriori algorithm to find product associations.</p>
+                <p>This system can be valuable for businesses aiming to boost sales by bundling products frequently bought together, enhancing the customer shopping experience, and increasing revenue.</p>
+                <!-- End of project summary -->
+            </li>
+
             <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Movie%20Recommendation">Movie Recommendation</a></li>
-            <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Product%20Bundling%20Project">Product Bundling Project</a></li>
+ <!-- Movie Recommendation Project Summary -->
+    <section>
+        <h2>Movie Recommendation System</h2>
+        <p><strong>Objective:</strong> The goal of this project is to build a movie recommendation system that suggests movies to users based on their preferences and movie similarities. The recommendation system combines both content-based and collaborative filtering approaches to provide personalized movie recommendations.</p>
+        <p><strong>Key Steps:</strong></p>
+        <ul>
+            <li><strong>Data Loading:</strong> The project begins by loading two essential datasets, 'movies.csv' and 'ratings.csv,' which contain information about movies and user ratings.</li>
+            <li><strong>Content-Based Filtering:</strong> Content-based filtering involves analyzing movie genres using TF-IDF (Term Frequency-Inverse Document Frequency) and computing cosine similarities between movies based on their genre descriptions. This helps identify movies with similar content.</li>
+            <li><strong>Collaborative Filtering:</strong> Collaborative filtering is implemented by creating a user-item matrix of movie ratings. Singular Value Decomposition (SVD) is applied to this matrix to extract latent factors, and predicted movie ratings are generated. Nearest Neighbors (KNN) is used to find similar users based on their movie preferences, and recommendations are made based on their preferences.</li>
+            <li><strong>Hybrid Recommendations:</strong> The project offers hybrid recommendations, combining content-based and collaborative filtering. Users can receive movie suggestions based on their preferences and movie similarities.</li>
+        </ul>
+        <p><strong>Outcome:</strong> The movie recommendation system provides users with personalized movie suggestions, enhancing their movie-watching experience by recommending movies that align with their interests and preferences.</p>
             <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a></li>
             <!-- Add more project links as needed -->
         </ul>
