--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Customer%20Segmentation">Customer Segmentation</a>
                 <!-- Add the project summary here -->
-                <p>In this data science project, I explored the Sales Transactions Dataset Weekly to gain insights into customer behavior and segment customers effectively. The primary objective was to identify distinct customer groups based on their purchase patterns.</p>
+                <p>In this data science project, I explored a Sales Transactions Dataset to gain insights into customer behavior and segment customers effectively. The primary objective was to identify distinct customer groups based on their purchase patterns.</p>
                 <p>This project involved data preprocessing, determining the optimal number of clusters, performing K-Means clustering, visualizing the clusters, and interpreting the results. It provides valuable insights for marketing and sales strategies.</p>
                 <!-- End of project summary -->
             </li>
