--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
 
             <li>
                 <a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a>
+                <!-- Add the project summary here -->
+                <p>This project involves SQL analysis of YouTube data. SQL queries are used to answer various questions related to video engagement, sentiment analysis, and data exploration.</p>
+                <!-- End of project summary -->
             </li>
             <!-- Add more project links as needed -->
         </ul>
     </section>
+
+    <!-- Code Analysis Section -->
+    <section>
 
 </body>
 </html>
