--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <h1>My Data Science Portfolio</h1>
 
+    <!-- Project Summary Section -->
+    <section>
+        <h2>Project Summary</h2>
+        <p>Explore my sentiment analysis project, showcasing my expertise in natural language processing (NLP) and text analytics. I have applied NLP techniques and machine learning models to classify text sentiments as positive, negative, or neutral. The project includes data preprocessing, feature extraction, model selection, evaluation, and visualization. I plan to expand this project in the future, making it even more valuable for sentiment analysis tasks.</p>
+        <p>Project Repository: <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/YouTube%20Sentiment%20Analysis">GitHub Link</a></p>
+    </section>
+
     <!-- Introduction Section -->
     <section>
         <h2>Explore My Data Science Portfolio</h2>
@@ -46,39 +53,4 @@
                 <!-- Add the project summary here -->
                 <p>The goal of this project was to develop a sophisticated and efficient product bundling recommendation system. This system leverages various data science techniques to analyze customer buying habits and suggest bundles of products that are frequently purchased together.</p>
                 <p>The project included data preprocessing, exploratory data analysis (EDA), K-Means Clustering for customer segmentation, and Association Rule Mining using the Apriori algorithm to find product associations.</p>
-                <p>This system can be valuable for businesses aiming to boost sales by bundling products frequently bought together, enhancing the customer shopping experience, and increasing revenue.</p>
-                <!-- End of project summary -->
-            </li>
-
-            <li>
-                <a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/Movie%20Recommendation">Movie Recommendation</a>
-                <!-- Add the project summary here -->
-                <p>The goal of this project is to build a movie recommendation system that suggests movies to users based on their preferences and movie similarities. The recommendation system combines both content-based and collaborative filtering approaches to provide personalized movie recommendations.</p>
-                <p>Key Steps:</p>
-                <ul>
-                    <li>Data Loading: The project begins by loading two essential datasets, 'movies.csv' and 'ratings.csv,' which contain information about movies and user ratings.</li>
-                    <li>Content-Based Filtering: Content-based filtering involves analyzing movie genres using TF-IDF (Term Frequency-Inverse Document Frequency) and computing cosine similarities between movies based on their genre descriptions. This helps identify movies with similar content.</li>
-                    <li>Collaborative Filtering: Collaborative filtering is implemented by creating a user-item matrix of movie ratings. Singular Value Decomposition (SVD) is applied to this matrix to extract latent factors, and predicted movie ratings are generated. Nearest Neighbors (KNN) is used to find similar users based on their movie preferences, and recommendations are made based on their preferences.</li>
-                    <li>Hybrid Recommendations: The project offers hybrid recommendations, combining content-based and collaborative filtering. Users can receive movie suggestions based on their preferences and movie similarities.</li>
-                </ul>
-                <p>Outcome: The movie recommendation system provides users with personalized movie suggestions, enhancing their movie-watching experience by recommending movies that align with their interests and preferences.</p>
-                <!-- End of project summary -->
-            </li>
-
-            <li>
-                <a href="https://github.com/TheChangeArtist/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a>
-                <!-- Add the project summary here -->
-                <p>This project involves SQL analysis of YouTube data. SQL queries are used to answer various questions related to video engagement, sentiment analysis, and data exploration.</p>
-                <!-- End of project summary -->
-            </li>
-            <!-- Add more project links as needed -->
-        </ul>
-    </section>
-
-            <!-- Add more project links as needed -->
-        </ul>
-    </section>
-
-</body>
-
-</html>
+                <p>This system
