--- a/index.html
+++ b/index.html
@@ -36,8 +36,23 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/Customer%20Segmentation">Customer Segmentation</a>
                 <!-- Add the project summary here -->
-                <p>In this data science project, I explored a Sales Transactions Dataset to gain insights into customer behavior and segment customers effectively. The primary objective was to identify distinct customer groups based on their purchase patterns.</p>
-                <p>This project involved data preprocessing, determining the optimal number of clusters, performing K-Means clustering, visualizing the clusters, and interpreting the results. It provides valuable insights for marketing and sales strategies.</p>
+                <!-- Project: Customer Segmentation with K-Means Clustering -->
+<section>
+    <h3>Customer Segmentation with K-Means Clustering</h3>
+    <p>This project focuses on customer segmentation using K-Means clustering, a powerful unsupervised machine learning technique. The objective is to categorize customers into distinct groups based on their purchasing behavior using a dataset of sales transactions.</p>
+
+    <h4>Key Steps:</h4>
+    <ol>
+        <li><strong>Data Loading:</strong> The project begins by loading a dataset containing sales transaction information. It includes features like transaction time, normalized data, and raw data.</li>
+        <li><strong>Data Preprocessing and Scaling:</strong> The data is standardized using StandardScaler to ensure that all features have the same scale. This step is crucial for K-Means clustering.</li>
+        <li><strong>Determining the Optimal Number of Clusters:</strong> The Elbow Method and Silhouette Score are used to find the optimal number of clusters. This helps decide the appropriate division of customers.</li>
+        <li><strong>K-Means Clustering:</strong> K-Means clustering is performed with the optimal number of clusters. Customer data is grouped into clusters, and cluster labels are added to the original dataset.</li>
+        <li><strong>Visualization:</strong> The clusters are visualized using the first two principal components, providing insights into the grouping of customers based on their purchase behavior.</li>
+        <li><strong>Interpretation of Clusters:</strong> The project interprets the clusters by calculating the mean values of features within each cluster. This analysis helps understand the characteristics of customers in each group.</li>
+        <li><strong>Conclusion and Recommendations:</strong> Based on the cluster characteristics, the project provides recommendations for marketing and business strategies tailored to each customer segment. These recommendations aim to enhance customer engagement and satisfaction.</li>
+    </ol>
+</section>
+
                 <!-- End of project summary -->
             </li>
             <li>
