--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/Movie%20Recommendation">Movie Recommendation</a>
                 <!-- Add the project summary here -->
+                <!-- Project: Movie Recommendation -->
+<section>
+    <h3>Movie Recommendation</h3>
+    <p>The Movie Recommendation project focuses on building a movie recommendation system that suggests movies to users based on their preferences and movie similarities. This system combines both content-based and collaborative filtering approaches to provide personalized movie recommendations.</p>
+
+    <h4>Key Steps:</h4>
+    <ol>
+        <li><strong>Data Loading:</strong> The project begins by loading two essential datasets, 'movies.csv' and 'ratings.csv,' which contain information about movies and user ratings.</li>
+        <li><strong>Content-Based Filtering:</strong> Content-based filtering involves analyzing movie genres using TF-IDF (Term Frequency-Inverse Document Frequency) and computing cosine similarities between movies based on their genre descriptions. This helps identify movies with similar content.</li>
+        <li><strong>Collaborative Filtering:</strong> Collaborative filtering is implemented by creating a user-item matrix of movie ratings. Singular Value Decomposition (SVD) is applied to this matrix to extract latent factors, and predicted movie ratings are generated. Nearest Neighbors (KNN) is used to find similar users based on their movie preferences, and recommendations are made based on their preferences.</li>
+        <li><strong>Hybrid Recommendations:</strong> The project offers hybrid recommendations, combining content-based and collaborative filtering. Users can receive movie suggestions based on their preferences and movie similarities.</li>
+    </ol>
+    <p>The movie recommendation system provides users with personalized movie suggestions, enhancing their movie-watching experience by recommending movies that align with their interests and preferences.</p>
+</section>
+
                 <!-- Your project summary for "Movie Recommendation" here -->
             </li>
             <li>
