--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/NBA%20Stat%20Project">NBA Stat Project</a>
                 <!-- Add the project summary here -->
+                <!-- Project: NBA Stat Project -->
+<section>
+    <h3>NBA Stat Project</h3>
+    <p>The NBA Stat Project is a data science project focused on analyzing and modeling NBA player statistics to gain insights into player performance, cluster players based on their performance, and predict player points. This project involves data preprocessing, feature engineering, exploratory data analysis (EDA), clustering analysis, and predictive modeling.</p>
+
+    <h4>Key Steps:</h4>
+    <ol>
+        <li><strong>Data Loading:</strong> The project begins by loading NBA player statistics data from a CSV file, and it forms the foundation for all subsequent analysis.</li>
+        <li><strong>Preprocessing:</strong> Data preprocessing includes converting the 'min' column to minutes, handling missing values by imputing with mean values, and other data cleaning tasks.</li>
+        <li><strong>Feature Engineering:</strong> A new feature 'PER' (Player Efficiency Rating) is calculated based on various player statistics to quantify player performance.</li>
+        <li><strong>EDA and Visualization:</strong> Exploratory Data Analysis is performed to understand the relationships between different player statistics. A correlation matrix is visualized to identify key correlations.</li>
+        <li><strong>Player Clustering:</strong> Players are clustered into groups using K-Means clustering based on selected performance features. PCA is applied for visualization.</li>
+        <li><strong>Predictive Modeling:</strong> A Linear Regression model is built to predict player points based on relevant statistics. The model's performance is evaluated using Mean Squared Error (MSE).</li>
+    </ol>
+    <p>This project provides valuable insights into NBA player performance, helps identify player clusters with similar attributes, and offers a predictive model for estimating player points based on their statistics.</p>
+</section>
+
                 <!-- Your project summary for "NBA Stat Project" here -->
             </li>
             <li>
