--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/Product%20Bundling%20Project">Product Bundling Project</a>
                 <!-- Add the project summary here -->
+                <!-- Project: Product Bundling Recommendation System -->
+<section>
+    <h3>Product Bundling Recommendation System</h3>
+    <h4>Objective</h4>
+    <p>The objective of this project is to build a sophisticated and efficient product bundling recommendation system. By leveraging data science techniques, we aim to analyze buying habits and suggest bundles of products that are often bought together by customers.</p>
+
+    <h4>Steps</h4>
+    <ol>
+        <li><strong>Data Preprocessing:</strong> We begin by loading the dataset and performing data preprocessing tasks, including handling missing values, data type conversions, and scaling.</li>
+        <li><strong>Exploratory Data Analysis (EDA):</strong> EDA is a critical step to understand the data's structure, distribution, and patterns. We explore summary statistics, distributions, and correlations among features.</li>
+        <li><strong>Model Building:</strong> For product bundling, we employ two main techniques: K-Means Clustering to segment customers based on buying habits and Association Rule Mining to discover associations between different products.</li>
+        <li><strong>Evaluation:</strong> We evaluate the model's performance and generate association rules to find product associations that can be valuable for recommendations.</li>
+        <li><strong>Conclusion:</strong> In the conclusion, we summarize the project's outcomes and highlight the potential benefits for businesses seeking to increase sales through effective product bundling strategies.</li>
+    </ol>
+    <p>By implementing this recommendation system, businesses can optimize their product offerings and enhance customer satisfaction.</p>
+</section>
+
                 <!-- Your project summary for "Product Bundling Project" here -->
             </li>
             <li>
