--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/Real%20Estate%20Time%20Series%20Analysis">Real Estate Time Series Analysis</a>
                 <!-- Add the project summary here -->
+                <!-- Project: Real Estate Time Series Analysis -->
+<section>
+    <h3>Real Estate Time Series Analysis</h3>
+    <p>The Real Estate Time Series Analysis project focuses on analyzing time series data related to the real estate market. It aims to provide insights and predictions based on historical real estate data, which can be valuable for investors and market analysis.</p>
+
+    <h4>Key Steps:</h4>
+    <ol>
+        <li><strong>Data Collection:</strong> The project starts by collecting historical real estate market data, including property prices, location, time, and other relevant features.</li>
+        <li><strong>Data Preprocessing:</strong> Data preprocessing tasks involve cleaning the data, handling missing values, and ensuring data is in a suitable format for analysis.</li>
+        <li><strong>Exploratory Data Analysis (EDA):</strong> EDA is conducted to understand trends, patterns, and correlations within the real estate data. Visualizations and summary statistics are used to gain insights.</li>
+        <li><strong>Time Series Analysis:</strong> Time series modeling techniques, such as ARIMA or Prophet, are applied to make predictions about future real estate market trends and property prices.</li>
+        <li><strong>Visualization and Reporting:</strong> The project concludes by presenting visualizations and insights derived from the time series analysis, offering valuable information for real estate investors and stakeholders.</li>
+    </ol>
+    <p>This project empowers real estate professionals and investors with data-driven insights to make informed decisions in the dynamic real estate market.</p>
+</section>
                 <!-- Your project summary for "Real Estate Time Series Analysis" here -->
             </li>
             <li>
