--- a/index.html
+++ b/index.html
@@ -165,6 +165,46 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/SQLYouTube">SQL YouTube</a>
                 <!-- Add the project summary here -->
+                <!-- Project: SQL Video Statistics Analysis -->
+<section>
+    <h3>SQL Video Statistics Analysis</h3>
+    <p>The SQL Video Statistics Analysis project involves querying and analyzing video statistics data using SQL queries. It focuses on extracting valuable insights from the data, such as like-to-dislike ratios, average comments per video by category, popular days for comments, top words in comments, and more.</p>
+
+    <h4>Key SQL Queries:</h4>
+    <ol>
+        <li><strong>Query 1: Highest and Lowest Like-to-Dislike Ratios</strong><br>
+            Find the videos with the highest and lowest like-to-dislike ratios in the dataset.
+        </li>
+        <li><strong>Query 2: Average Comments per Video by Category</strong><br>
+            Calculate the average number of comments per video for each category.
+        </li>
+        <li><strong>Query 3: Most Commented Day of the Week</strong><br>
+            Determine which day of the week receives the most comments.
+        </li>
+        <li><strong>Query 4: Top 3 Most Frequent Words in Comments</strong><br>
+            Identify the top 3 most frequent words used in comments.
+        </li>
+        <li><strong>Query 5: Videos with More Likes Than Average</strong><br>
+            Find out how many videos have more likes than the average number of likes across all videos.
+        </li>
+        <li><strong>Query 6: Percentage of Total Views by Category</strong><br>
+            Calculate the percentage of total views that each category represents.
+        </li>
+        <li><strong>Query 7: Videos in the Top 5 for Likes and Comments</strong><br>
+            Identify videos that appear in the top 5 for both most likes and most comments.
+        </li>
+        <li><strong>Query 8: Average Views for Videos with Above-Average Likes</strong><br>
+            Calculate the average number of views for videos that have above-average likes.
+        </li>
+        <li><strong>Query 9: Videos with Sentiment Scores Higher Than Average</strong><br>
+            Find videos with sentiment scores higher than the average sentiment score.
+        </li>
+        <li><strong>Query 10: Correlation Between Views and Comments</strong><br>
+            Calculate the correlation between views and comments in the dataset.
+        </li>
+    </ol>
+</section>
+
                 <!-- Your project summary for "SQL YouTube" here -->
             </li>
             <li>
