--- a/index.html
+++ b/index.html
@@ -210,11 +210,63 @@
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/Stock%20Predection">Stock Prediction</a>
                 <!-- Add the project summary here -->
+                <!-- Project: Stock Price Prediction with Linear Regression -->
+<section>
+    <h3>Stock Price Prediction with Linear Regression</h3>
+    <p>The Stock Price Prediction project utilizes Linear Regression, a machine learning algorithm, to predict stock prices. The project involves data loading, feature engineering, data splitting, model building, and evaluation.</p>
+
+    <h4>Key Steps:</h4>
+    <ol>
+        <li><strong>Data Loading:</strong><br>
+            Load the dataset containing historical stock price data, including the 'Date' and 'Close' columns.
+        </li>
+        <li><strong>Data Preprocessing and Feature Engineering:</strong><br>
+            - Convert the 'Date' column to datetime and set it as the index.<br>
+            - Create new features, such as a 1-day lag of 'Close' prices and a 7-day moving average of 'Close' prices.<br>
+            - Handle missing values by dropping rows with NaN values.
+        </li>
+        <li><strong>Data Splitting:</strong><br>
+            Split the data into training and testing sets for model evaluation.
+        </li>
+        <li><strong>Model Building:</strong><br>
+            Build a Linear Regression model to predict stock prices.
+        </li>
+        <li><strong>Predictions:</strong><br>
+            Make predictions on the test dataset using the trained model.
+        </li>
+        <li><strong>Evaluation:</strong><br>
+            Calculate the Root Mean Squared Error (RMSE) to evaluate the model's prediction performance.
+        </li>
+        <li><strong>Visualizing Predictions:</strong><br>
+            Visualize the actual stock prices and predicted prices over time using a line plot.
+        </li>
+    </ol>
+</section>
+
                 <!-- Your project summary for "Stock Prediction" here -->
             </li>
             <li>
                 <a href="https://github.com/JustinBustamante/Data_Science-Journey/tree/main/YouTube%20Sentiment%20Analysis">YouTube Sentiment Analysis</a>
                 <!-- Add the project summary here -->
+                <!-- Project: Sentiment Analysis of YouTube Comments -->
+<section>
+    <h3>Sentiment Analysis of YouTube Comments</h3>
+    <p>The Sentiment Analysis of YouTube Comments project involves utilizing the YouTube API and TextBlob library to analyze the sentiments of comments on a YouTube video. The project includes initializing the YouTube API, retrieving comments, and performing sentiment analysis.</p>
+
+    <h4>Key Steps:</h4>
+    <ol>
+        <li><strong>Initialize YouTube API:</strong><br>
+            Initialize the YouTube API using a developer key.
+        </li>
+        <li><strong>Get Comments:</strong><br>
+            Retrieve comments from a specified YouTube video using the YouTube API.
+        </li>
+        <li><strong>Sentiment Analysis:</strong><br>
+            Perform sentiment analysis on the comments using the TextBlob library. Determine whether comments are positive, neutral, or negative based on sentiment polarity.
+        </li>
+    </ol>
+</section>
+
                 <!-- Your project summary for "YouTube Sentiment Analysis" here -->
             </li>
         </ul>
